Implement pending asset deletion with batch processing and datapoint management